<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="20dp" >
		
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_0" />
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_0"
	        android:layout_marginBottom="25dp" />
	
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_1" />
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_1"
	        android:layout_marginBottom="25dp" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_2" />
	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_2"
	        android:layout_marginBottom="25dp" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_3" />
	    <EditText
	        android:id="@+id/editText4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_3"
	        android:layout_marginBottom="25dp" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_4" />
	    <EditText
	        android:id="@+id/editText5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_4"
	        android:layout_marginBottom="25dp" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_5" />
	    <EditText
	        android:id="@+id/editText6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_5"
	        android:layout_marginBottom="25dp" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_6" />
	    <EditText
	        android:id="@+id/editText7"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/pref_6" />

	</LinearLayout>
	
</ScrollView>